fixed the plants-lover-section mobile responsive part

--- a/styles/responsive-flowers.css
+++ b/styles/responsive-flowers.css
@@ -284,11 +284,13 @@ body{
   text-decoration: underline;
 }
 
-.zabo-box h2 {
-  font-size: 2rem;
-}
+/* .zabo-box h2 {
+ font-size: 2rem; 
+} */
+
 .join-section{
   background-image: url(../assets/news-letter-bg.png);
+  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -299,7 +301,7 @@ body{
 
 }
 .join-section h1{
-  font-size: 2.5rem;
+  font-size: 40px;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -324,22 +326,36 @@ body{
   /* gap: 23px; */
 }
 .subscribe {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   gap: none;
-  margin-top: 10px;
+  margin-top: 10px; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 0;
+  max-width: 830px;
+
 }
 .subscribe input {
-  display: flex;
+  /* display: flex;
   width: 644px;
   height: 50px;
   padding: 1px 20px;
   align-items: center;
   gap: 10px;
+  border: none; */
+  flex: 1; /* Allow input to take remaining space */
+  height: 50px;
+  padding: 0 20px;
   border: none;
+  font-size: 1rem;
+  box-sizing: border-box;
 }
 .subscribe button {
-  background: #E95A08;
+  /* background: #E95A08;
   color: white;
   display: flex;
   width: 186px;
@@ -348,7 +364,18 @@ body{
   justify-content: center;
   align-items: center;
   gap: 10px;
+  border: none; */
+
+  height: 50px;
+  padding: 0 20px;
+  background-color: #E95A08;
+  color: white;
   border: none;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  white-space: nowrap; /* Prevents wrapping */
+
 }
 
 footer {
@@ -413,17 +440,29 @@ footer {
 
 @media  screen and (max-width: 576px) {
     .subscribe{
-      align-items: center;
+      /* align-items: center;
       justify-content: center;
       text-align: center;
       width:100%;
       margin-left: 35px;
       margin-right: 35px; 
-      flex-direction: row; 
+      flex-direction: row;  */
+
+      flex-direction: row; /* Stay horizontal */
+      padding: 0 15px; /* Add horizontal breathing room */
+
     }
   .subscribe input{
-   text-align: center;
+   /* text-align: center; */
+   flex: 1;
+   min-width: 0; /* Prevents overflow from long text */
   }  
+
+  .subscribe button {
+    width: auto;
+    padding: 0 16px;
+  }
+
   .container{
     grid-template-columns: repeat(2, 1fr);
   }
@@ -447,23 +486,73 @@ footer {
     display: none;
   }
   .banner-description{
-    text-align: center;
+    text-align: left;
   }
   .latest-description{
-    margin-left: 1px;
+    margin-left: 20px;
     margin-right: 1px;
+    text-align: left;
   }
-  /* .plant-section{
+  .plant-section{
     flex-direction: column;
-  }  */
-  .plant-lover{
-    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  } 
+  .plants-lover-img{
+    margin-top: 30px;
+    text-align: center;
+  }
+  .flower-image{
+    /* flex-direction: column; */
+    margin-right: 0;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+  }
+ .plant-lover{
+  /* margin-bottom: 150px; */
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 1rem;
+  max-width: 500px;
+  margin-bottom: 2rem;
+ } 
+  .plant-lover-title{
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+  white-space:nowrap;
+ }
+ .plant-text{
+  padding: 0px;
+ }
+ /*
+ .plants-lover-section{
+  display: flex;
+  flex-wrap: wrap;
+ } */
+  .latest-section h1{
+    /* margin-top: 2rem;
+    padding-top: 1em; */
+    /* display: block;
+    clear: both;          make sure it starts on a new line */
+    /* margin-top: 1rem;
+    font-size: 1.5rem;
+    margin-bottom: 15px; */
+    margin-top: 150px;
+    text-align: center;
+    display: block;
+    font-size: 24px;
+  }
+  .latest-section{
+    margin-top: 150px;     /* separate latest deals section from above */
+    padding-top: 1rem;
   }
   .plant-description{
-    margin-left: 1px;
-    margin-right: 1px;
+    margin-left: 35px;
+    margin-right: 10px;
+    text-align:left;
   }
-  
   .footer-links{
   flex-direction: column;
   margin-left: 0px;
@@ -474,15 +563,19 @@ footer {
   .footer-content{
     flex-direction: column;
   }
-  
+  .join-section{
+    margin: 0px;
+  }
   .join-title{
     text-align: center;
     align-items: center;
-    font-size: 1em;
     margin-left: 200px;
     margin-right: 150px;
     justify-content: center;
     margin: 0;
-    font-size: 1.3rem;
+    font-size: 10px;
+  }
+  .join-section h1{
+    font-size: 24px;
   }
   }
